fix(app): Fix spacing under launch button

--- a/static/index.css
+++ b/static/index.css
@@ -99,9 +99,9 @@ header {
     border-radius: 25px;
     font-size: 20px;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 10px;
     display: inline-block;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 
 .cta-button-large:hover {
